--- a/.env
+++ b/.env
@@ -22,5 +22,5 @@ dgShowInlineTitle=false
 dgShowFileTree=true
 dgEnableSearch=true
 dgShowToc=true
-dgLinkPreview=false
-dgShowTags=false
+dgLinkPreview=true
+dgShowTags=true
